2013-03-23  Andy Buckley  <andy.buckley@cern.ch>

	* Adding non-multiset versions of LHAGlue.cc functions.

	* Use 1 rather than 0 as the lowest (and default) multi-set index
	in LHAGlue.cc.

2013-03-15  Andy Buckley  <andy.buckley@cern.ch>

	* Using much cleverer Boost discovery macros (with a slight fix)
	from https://github.com/tsuna/boost.m4. Need to feed back the
	fix...

	* Adding --with-boost-lib, --with-boost-inc, and
	--with-yaml-cpp-lib, --with-yaml-cpp-inc configure flags,
	particularly for use on systems where Boost's install is a bit
	borked and there is no common prefix dir for which $prefix/lib and
	$prefix/include are valid dirs.

2013-03-05  Andy Buckley  <andy.buckley@cern.ch>

	* Convert LHAGlue.cc to load the 0th member on set initialisation,
	plus some other tweaks (this matches the v5 behaviour _and_ makes
	it much harder to get into an inconsistent state).

2013-03-03  Andy Buckley  <andy.buckley@cern.ch>

	* Remove -ansi from the compiler setup (the long long in some
	yaml-cpp versions is causing trouble, at least on Macs with gcc
	4.2)

2013-03-02  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an example script for using the Python wrapper, and
	improving/fixing the mkPDF mapping.

2013-03-01  Andy Buckley  <andy.buckley@cern.ch>

	* Some LHAGlue fixes and improvements.

	* Fixing environment variable updating for path handling.

	* Adding Cython docstrings and path/version functions.

	* Integrating the Cython extension build into the autotools build/install.

	* Path handling and PDF data file search error reporting fixes/improvements.

	* Add a fallback to use LHAPATH if LHAPDF_DATA_PATH is undefined. (pre-deprecated?)

	* Re-enabling Cython mapping (only the basic functionality subset).

	* Adding LHAPDF::version() function.

	* Adding configure testing for -mt versions of Boost (file)system libs.

2013-02-28  Andy Buckley  <andy.buckley@cern.ch>

	* Adding name+member and LHAPDF ID constructors for Info.
